2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Alias amd64 to x86_64.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* NEWS: mention multiboot on EFI.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/main.c (grub_load_modules): Handle errors from init functions of
	embeded modules.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/autofs.c (autoload_fs_module): Handle errors.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Disable linux.mod on qemu-mips since it's not functional and leads
	to compilation failure.

	* conf/mips.rmk (pkglib_MODULES): Remove linux.mod.
	* conf/mips-yeeloong.rmk (pkglib_MODULES): Add linux.mod.
	* conf/mips.rmk (linux_mod_SOURCES): Move from here ...
	* conf/mips-yeeloong.rmk (linux_mod_SOURCES): ... here
	* conf/mips.rmk (linux_mod_CFLAGS): Move from here ...
	* conf/mips-yeeloong.rmk (linux_mod_CFLAGS): ... here
	* conf/mips.rmk (linux_mod_ASFLAGS): Move from here ...
	* conf/mips-yeeloong.rmk (linux_mod_ASFLAGS): ... here
	* conf/mips.rmk (linux_mod_LDFLAGS): Move from here ...
	* conf/mips-yeeloong.rmk (linux_mod_LDFLAGS): ... here
	Reported by: BVK Chaitanya

2010-03-04  Jordan Uggla  <jordan.uggla@gmail.com>

	* INSTALL: Add gettext as a dependency and add qemu to a new section
	"Prerequisites for make-check".

2010-03-04  Christian Franke  <franke@computer.org>

	* util/grub-pe2elf.c: Add missing include "progname.h".

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/crypto.c (read_crypto_list): Fix a typo.
	Reported by: Seth Goldberg.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (DISTCLEANFILES): Add stamp-h1.
	Reported by: Seth Goldberg.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (CLEANFILES) [FONT_SOURCE && grub_mkfont]: Add
	ascii.bitmaps.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* genmk.rb: Remove terminal*.lst in make clean.
	Reported by: Seth Goldberg.
